--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "train-tagger": "node training/train_tagger.js",
     "train": "npm-run-all train-intent train-tagger",
     "prep-client": "node copy_models.js",
-    "workshop-app": "yarn prep-client && parcel app/index.html --open"
+    "server": "node server.js",
+    "workshop": "npm run prep-client && parcel app/index.html --open & npm run server"
   },
   "author": "",
   "license": "Apache-2.0",
@@ -32,8 +33,8 @@
     "fs-extra": "^7.0.1",
     "mkdirp": "^0.5.1",
     "ndjson": "^1.5.0",
-    "nexmo": "^2.5.3-beta-3",
-    "nexmo-client": "^6.0.0-beta.1",
+    "nexmo": "^2.5.4-beta-1",
+    "nexmo-client": "^6.0.1",
     "node-fetch": "^2.6.0",
     "npm-run-all": "^4.1.5",
     "username-generator": "^1.1.0"
